--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,7 +2,7 @@
   "name": "basement-ui",
   "version": "1.0.0",
   "description": "",
-  "main": "module/index.js",
+  "___main": "module/index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
