--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -5,7 +5,8 @@
   "___main": "module/index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:no-coverage": "jest",
     "build": "rm -rf ./module && npm run build:typedef && npm run build:scripts",
     "type-check": "tsc",
     "build:scripts": "node ./build/build.js",
@@ -20,8 +21,8 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@babel/preset-env": "^7.21.4",
-    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-env": "^7.23.3",
+    "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.21.4",
     "@storybook/addon-essentials": "^7.0.6",
     "@storybook/addon-interactions": "^7.0.6",
@@ -30,10 +31,15 @@
     "@storybook/react": "^7.0.6",
     "@storybook/react-webpack5": "^7.0.6",
     "@storybook/testing-library": "^0.0.14-next.2",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.1",
+    "@types/jest": "^29.5.8",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/parser": "^5.59.0",
     "autoprefixer": "^10.4.14",
+    "babel-jest": "^29.7.0",
     "esbuild": "^0.17.17",
     "esbuild-plugin-copy": "^2.1.1",
     "esbuild-sass-plugin": "^2.8.0",
@@ -44,13 +50,16 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-storybook": "^0.6.11",
     "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.23",
     "postcss-preset-env": "^8.3.2",
     "prettier": "^2.8.7",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-test-renderer": "^18.2.0",
     "storybook": "^7.0.6",
+    "ts-jest": "^29.1.1",
     "typescript": "5.0.4"
   },
   "peerDependencies": {
