--- a/.github/workflows/trigger-ci.yml
+++ b/.github/workflows/trigger-ci.yml
@@ -5,13 +5,25 @@ on:
     types: [opened, reopened, synchronize]
 
 jobs:
-  setup:
-    uses: ./.github/workflows/job-setup.yml
-    if: |
-      github.event.pull_request.draft == false
-      && !startsWith(github.head_ref, 'release')
-    secrets: inherit
-  type-check:
-    needs: setup
-    uses: ./.github/workflows/job-type-check.yml
-    secrets: inherit
+  ci:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./packages/core
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20
+          cache: "npm"
+          cache-dependency-path: "**/package-lock.json"
+      - name: Install dependencies
+        run: npm ci
+      - name: Type check
+        run: npm run type-check
+      - name: Lint
+        run: npm run lint
+      - name: Test
+        run: npm run test:coverage
