BM-21 Lintエラー修正

--- a/.github/workflows/trigger-ci.yml
+++ b/.github/workflows/trigger-ci.yml
@@ -23,7 +23,9 @@ jobs:
         run: npm ci
       - name: Type check
         run: npm run type-check
-      - name: Lint
+      - name: Lint code
         run: npm run lint
-      - name: Test
+      - name: Check code format
+        run: npm run format:check
+      - name: Run unit test
         run: npm run test:coverage
