BM-57 change:CIを一時的に使用中止

--- a/.github/workflows/trigger-ci.yml
+++ b/.github/workflows/trigger-ci.yml
@@ -2,7 +2,7 @@ name: Trigger CI On Pull Request
 
 on:
   pull_request:
-    types: [opened, reopened, synchronize]
+    types: [ opened, reopened, synchronize ]
 
 jobs:
   ci:
@@ -19,13 +19,13 @@ jobs:
           node-version: 20
           cache: "npm"
           cache-dependency-path: "**/package-lock.json"
-      - name: Install dependencies
-        run: npm ci
-      - name: Type check
-        run: npm run type-check
-      - name: Lint code
-        run: npm run lint
-      - name: Check code format
-        run: npm run format:check
-      - name: Run unit test
-        run: npm run test:coverage
+#      - name: Install dependencies
+#        run: npm ci
+#      - name: Type check
+#        run: npm run type-check
+#      - name: Lint code
+#        run: npm run lint
+#      - name: Check code format
+#        run: npm run format:check
+#      - name: Run unit test
+#        run: npm run test:coverage
