--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -37,6 +37,7 @@
     "@testing-library/user-event": "^14.5.2",
     "@vanilla-extract/css": "^1.16.1",
     "@vanilla-extract/esbuild-plugin": "^2.3.10",
+    "@vanilla-extract/vite-plugin": "^4.0.19",
     "esbuild": "^0.24.0",
     "esbuild-plugin-copy": "^2.1.1",
     "eslint-plugin-react": "^7.37.2",
