--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "basement-ui-project",
   "private": true,
+  "packageManager": "npm@10.0.0",
   "scripts": {
     "build": "turbo build",
-    "dev": "turbo dev",
-    "lint": "turbo lint"
+    "lint": "turbo lint",
+    "check-format": "turbo check-format"
   },
   "license": "ISC",
   "workspaces": [
