--- a/packages/core/tsconfig.build.json
+++ b/packages/core/tsconfig.build.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "emitDeclarationOnly": true,
     "declarationMap": false,
-    "outDir": "dist"
+    "outDir": "dist",
+    "noEmit": false
   },
   "exclude": ["node_modules", "**/*.stories.tsx", "**/stories/*.tsx", "**/*.spec.ts", "**/*.test.ts", "**/*.spec.tsx", "**/*.test.tsx"]
 }
