--- a/.github/workflows/trigger-ci.yml
+++ b/.github/workflows/trigger-ci.yml
@@ -20,7 +20,7 @@ jobs:
           restore-keys: ${{ runner.os }}-npm-
       - name: Install Node modules
         run: npm ci
-      - name: Lint code
+      - name: Lint code (and check type)
         run: npm run lint
       - name: Check code format
         run: npm run check-format
