--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "turbo build",
     "lint": "turbo lint",
+    "test": "turbo coverage",
     "check-format": "turbo check-format"
   },
   "license": "ISC",
