--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "lint": "eslint --fix --ignore-pattern 'dist/*' && tsc",
     "check-format": "prettier ./src --check",
-    "test": "vitest",
+    "test": "vitest run",
+    "coverage": "vitest run --coverage.enabled=true",
     "build": "rm -rf ./dist && npm run build:script && npm run build:css && npm run build:typedef",
     "build:script": "node ./builder/build.js",
     "build:css": "node ./builder/build-css.js",
@@ -42,6 +43,7 @@
     "@vanilla-extract/css": "^1.16.1",
     "@vanilla-extract/esbuild-plugin": "^2.3.10",
     "@vanilla-extract/vite-plugin": "^4.0.19",
+    "@vitest/coverage-v8": "^3.0.4",
     "esbuild": "^0.24.0",
     "esbuild-plugin-copy": "^2.1.1",
     "eslint-plugin-react": "^7.37.2",
