--- a/turbo.json
+++ b/turbo.json
@@ -10,6 +10,10 @@
     },
     "check-format": {
       "dependsOn": ["^check-format"]
+    },
+    "coverage": {
+      "dependsOn": ["^coverage"],
+      "outputs": ["coverage/*"]
     }
   }
 }
