BM-65 fix: コマンド修正

--- a/.github/workflows/trigger-ci.yml
+++ b/.github/workflows/trigger-ci.yml
@@ -25,4 +25,4 @@ jobs:
       - name: Check code format
         run: npm run check-format
       - name: Run unit test
-        run: npm run coverage
+        run: npm run test
