BM-88 fix: リリース機能の問題の修正2

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -54,7 +54,7 @@ jobs:
         run: npm ci
       - name: Build modules
         working-directory: packages/core
-        run: npm run build
+        run: npm run build && ls -l .
       - name: Modify package.json
         working-directory: packages/core
         run: npm run package:github
