--- a/package.json
+++ b/package.json
@@ -14,15 +14,16 @@
     "packages/*"
   ],
   "devDependencies": {
-    "@eslint/js": "^9.16.0",
-    "eslint": "^9.16.0",
-    "eslint-config-prettier": "^9.1.0",
+    "@eslint/js": "^9.25.1",
+    "eslint": "^9.25.1",
+    "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-import": "^2.31.0",
-    "globals": "^15.13.0",
-    "prettier": "^3.4.2",
-    "turbo": "^2.1.2",
-    "typescript": "^5.7.2",
-    "typescript-eslint": "^8.17.0",
-    "vitest": "^2.1.8"
+    "eslint-plugin-sort": "^4.0.0",
+    "globals": "^16.0.0",
+    "prettier": "^3.5.3",
+    "turbo": "^2.5.2",
+    "typescript": "5.8.3",
+    "typescript-eslint": "^8.31.0",
+    "vitest": "^3.1.2"
   }
 }
